update Portfolio link

--- a/Assets/WebGLTemplates/Portfolio/index.html
+++ b/Assets/WebGLTemplates/Portfolio/index.html
@@ -58,9 +58,7 @@
 				<h5 class="alert-heading">Browser not supported!</h5>
 				<p class="mb-0">
 					Take a look at my
-					<a
-						href="https://jadiewadie.roundsquare.site"
-						class="alert-link"
+					<a href="https://jadiewadie.net" class="alert-link"
 						>portfolio</a
 					>.
 				</p>
